# open-portal

./: LICENSE  README.md  pyproject.toml
src/dockportal/: banner.py  cli.py  config.py  editor.py  tui.py
src/open_portal/: banner.py  cli.py  config.py  detect.py  tui.py
tests/: test_config.py  test_detect.py
