[project]
name = "dockportal"
version = "0.1.0"
description = "Manage your favorite projects from the terminal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
]

[project.scripts]
portal = "dockportal.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dockportal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
